homework/12-kubernetes-05-cni/echoserver_deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver-deployment
  labels:
    app: echoserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echoserver
  template:
    metadata:
      name: echoserver
      labels:
        app: echoserver
    spec:
      hostname: echoserver
      containers:
      - name: echoserver
        image: k8s.gcr.io/echoserver:1.4
        ports:
        - containerPort: 8080
