homework/12-kubernetes-05-cni/multitool_deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multitool-deployment
  labels:
    app: multitool
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multitool
  template:
    metadata:
      labels:
        app: multitool
    spec:
      hostname: multitool
      containers:
      - name: multitool
        image: praqma/network-multitool
