homework/12-kubernetes-05-cni/NetworkPolicy2.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
spec:
  podSelector:
    matchLabels:
      app: echoserver
  policyTypes:
  - Ingress
  - Egress
